Fix for Java 1.8
Signed-off-by: Pierre Adam <p.adam@merim-groupe.com>